tests/smt2/error/err_check_check.smt2
(declare-const a Bool)
(declare-const b Bool)
(set-info :status unsat)
(check-sat)
(check-sat)